# ags-documentador-agentico

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  makefile  pyproject.toml  requirements.txt  research_state.db  run.py
app/: .env
app/agents/: compiler.py  human_reviewer.py  planner.py  researcher.py  researcher_ORI_230125.py  writer.py
app/agents/researcher/: README.md  __init__.py  main.py
app/agents/researcher/app/agents/researcher/infrastructure/services/: gemini_service.py
app/agents/researcher/application/: use_cases.py
app/agents/researcher/application/decorators/: metrics_decorator.py
app/agents/researcher/application/use_cases/: __init__.py  generate_initial_queries.py  generate_queries.py  initialize_research.py  manage_research_state.py  recover_section_state.py  research_section.py  search_web_queries.py  validate_query.py  web_search.py  write_section.py
app/agents/researcher/domain/: entities.py  interfaces.py
app/agents/researcher/domain/entities/: __init__.py  metrics_data.py  query_validation.py  research_state_schema.py  research_status.py  search_engine.py
app/agents/researcher/domain/interfaces/: language_model.py  search_provider.py
app/agents/researcher/domain/repositories/: __init__.py  research_repository.py
app/agents/researcher/infrastructure/: repositories.py  services.py
app/agents/researcher/infrastructure/repositories/: __init__.py  research_queries.py  sqlite_repository.py
app/agents/researcher/infrastructure/services/: gemini_service.py  progress_notifier.py  prompt_generation_service.py  search_complexity_evaluator.py  search_provider_manager.py  search_providers.py
app/agents/researcher/presentation/: researcher.py
app/agents/tools/: search_web.py
app/agents/trend_agents/: compiler.py  planner.py
app/api/: trend_routes.py
app/config/: config.py
app/db_manager/: mysql_connector.py
app/graph/: campaign_builder.py  director.py  report_builder.py  report_graph.py  researcher_builder.py  researcher_graph.py  trend_graph.py  trend_research_builder.py
app/graph/builder/: base.py
app/providers/: llm.py
app/services/: jina_service.py  tavilyService.py
app/utils/: llms.py  prompts.py  state.py
backend/server/: app.py  server_utils.py  websocket_manager.py
backend/websockets/: handlers.py  manager.py
