[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Orlando Kuan <Orlandokuanb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "*"
python-dotenv = "*"
uvicorn = "*"
fastapi = "*"
aiokafka = "*"
sqlalchemy = "*"
pyjwt = "*"
psycopg2 = "*"
redis = "*"
structlog = "*"
pydantic = {extras = ["email"], version = "*"}
pydantic-settings = "*"
langchain = "*"
langsmith = "*"
motor = "*"
pandas = "*"
starlette = "*"
httpx = "*"
asyncpg = "*"
pypdf2 = "*"
langchain-community = "*"
python-multipart = "*"
passlib = {extras = ["bcrypt"], version = "*"}
langgraph = "*"
pypdf = "*"
tavily-python = "*"
langchain-anthropic = "*"
langchain-google-vertexai = "*"
langgraph-cli = {extras = ["inmem"], version = "0.1.67"}
langchain-openai = "^0.3.0"
poetry = "^2.0.1"

[tool.poetry.dev-dependencies]
testfixtures = "*"
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"